manifests/flannel/networkpolicy/pod-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: centos
  labels: 
    test: centos
spec:
  containers:
  - name: centos
    image: ikubernetes/myapp:v1
