manifests/flannel/networkpolicy/egress-def.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-engress
spec: 
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
