manifests/flannel/networkpolicy/ingress-def.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
spec: 
  podSelector: {}
  policyTypes:
  - Ingress
