manifests/flannel/networkpolicy/my-ns-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-netpol
  namespace: my-ns
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: test
          operator: Exists
          values:
